# recipe-server

./: LICENSE.txt  README.md
recipe-server/: Cargo.toml  recipe.db  recipes.json  sqlite.db  sqlite.db-shm  sqlite.db-wal
recipe-server/src/: main.rs  recipe.rs  templates.rs
recipe-server/templates/: index.html
