[package]
name = "recipe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.1"
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = {version = "1.44.2", features = ["full"]}
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
serde_json = "1.0.140"
rand = "0.9.1"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = {version = "4", features = ["axum"]}


