[package]
name = "recipe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = {version = "1.44.2", features = ["full"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"]}
serde_json = "1.0.140"
rand = "0.9.1"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = {version = "9.0.2", features = ["axum"]}
tower-http = "0.6.6"
hyper = { version = "1.6", features = ["full"] }
